--- a/po/nl.po
+++ b/po/nl.po
@@ -5169,12 +5169,12 @@ msgstr "Kan de codec configuratie data niet vinden in het eerste MPEG-4 deel 2 v
 #: src/input/r_ogm.cpp:337
 #, no-c-format
 msgid "Could not find the next Ogg page. This indicates a damaged Ogg/Ogm file. Will try to continue.\n"
-msgstr "Kan de volgende Ogg pagina niet vinden. Dit geeft een beschadigde Ogg/Ogm bestand aan. Zal proberen door te gaan.\n"
+msgstr "Kan de volgende Ogg pagina niet vinden. Dit geeft een beschadigd Ogg/Ogm bestand aan. Zal proberen door te gaan.\n"
 
 #: src/input/r_avi.cpp:604
 #, no-c-format
 msgid "Could not find valid DTS headers in this track's first frames.\n"
-msgstr "Kon geen geldig DTS beginblokken vinden in dit spoor, eerste beeld.\n"
+msgstr "Er konden geen geldige DTS-headers worden gevonden in de eerste frames van dit spoor.\n"
 
 #: src/common/locale.cpp:138
 #, no-c-format, c++-format
@@ -5218,7 +5218,7 @@ msgstr "Kon het tijd code bestand '{0}' niet openen om ({1}) te schrijven .\n"
 #: src/common/xml/ebml_converter.cpp:257
 #, no-c-format, c++-format
 msgid "Could not open/read the file '{0}'."
-msgstr "Kon het bestand niet openen/lezen '{0}'."
+msgstr "Kon het bestand '{0}' niet openen/lezen."
 
 #: src/common/chapters/chapters.cpp:558
 #, no-c-format, c++-format
@@ -5285,7 +5285,7 @@ msgstr "Maak nieuwe instellingen"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:863
 #, no-c-format
 msgid "Create one new multiplex settings tab and add all files there"
-msgstr "Maak één nieuwe samenvoeg tab en voeg alle bestanden daar naar toe"
+msgstr "Maak één nieuwe samenvoeg tab en voeg alle bestanden daar toe"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:864
 #, no-c-format
@@ -5474,7 +5474,7 @@ msgstr "Volg bestanden"
 #: src/common/chapters/cue_parser.cpp:387
 #, no-c-format, c++-format
 msgid "Cue sheet parser: Invalid INDEX entry in line {0}.\n"
-msgstr "Volg document(en) (cue) ontleder: Ongeldig index ingang in regel {0}.\n"
+msgstr "Volg document(en) (cue) ontleder: Ongeldige INDEX regel in regel {0}.\n"
 
 #: src/common/chapters/cue_parser.cpp:406
 #, no-c-format, c++-format
@@ -5628,7 +5628,7 @@ msgstr "Datum gestart"
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:231
 #, no-c-format
 msgid "Deactivating this checkbox is a way to disable a configuration temporarily without having to change its parameters."
-msgstr "Deze vink deactiveren, is een manier om de instellingen tijdelijk te deactiveren zonder dat je de instellingen hoeft te veranderen"
+msgstr "Door dit selectievakje uit te schakelen, kunt u een configuratie tijdelijk uitschakelen zonder dat u de parameters hoeft te wijzigen."
 
 #: src/mkvtoolnix-gui/chapter_editor/chapter_model.cpp:79
 #, no-c-format
@@ -5772,17 +5772,17 @@ msgstr "Afhankelijk van de instelling hieronder kan deze taal ook worden gebruik
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:498
 #, no-c-format
 msgid "Depending on this setting the language can also be derived from the file name if the language in the source file is 'undetermined' ('und')."
-msgstr "Afhankelijk van deze instelling kan de taal ook worden afgeleid van de bestandsnaam als de taal in het bronbestand is 'onbepaald' ('und') is."
+msgstr "Afhankelijk van deze instelling kan de taal ook worden afgeleid van de bestandsnaam als de taal in het bronbestand 'onbepaald' ('und') is."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2317
 #, fuzzy, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "Spoortalen afleiden van bestandsnamen"
+msgstr "\"& slechthorend\"-vlag voor audio/ondertiteling afleiden uit bestandsnamen:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2316
 #, fuzzy, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Spoortalen afleiden van bestandsnamen"
+msgstr "\"& geforceerd weergeven\"-vlag voor ondertiteling afleiden uit bestandsnamen:"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:211
 #, no-c-format
@@ -5940,7 +5940,7 @@ msgstr "Schalen uitschakelen voor &hoge DPI-schermen"
 #: src/common/hacks.cpp:45
 #, no-c-format
 msgid "Disable the use of SimpleBlocks instead of BlockGroups."
-msgstr "Zet gebruik van SimpelBlokken uit i.p.v. BlokGroepen."
+msgstr "Zet gebruik van SimpleBlocks uit i.p.v. BlockGroups."
 
 #: src/mkvtoolnix-gui/chapter_editor/chapter_model.cpp:110
 #: src/mkvtoolnix-gui/jobs/job.cpp:275
@@ -6068,7 +6068,7 @@ msgstr "Document versie type"
 #: src/common/file_types.cpp:28
 #, no-c-format
 msgid "Dolby Digital/Dolby Digital Plus (AC-3, E-AC-3)"
-msgstr ""
+msgstr "Dolby Digital/Dolby Digital Plus (AC-3, E-AC-3)"
 
 #: src/common/file_types.cpp:34
 #, no-c-format
@@ -6088,7 +6088,7 @@ msgstr "Genereer géén hoofdstukken"
 #: src/common/hacks.cpp:61
 #, no-c-format
 msgid "Don't remove track statistics tags when reading Matroska files, no matter if new ones are created or not."
-msgstr ""
+msgstr "Verwijder geen trackstatistiekentags wanneer u Matroska-bestanden leest, ongeacht of er nieuwe bestanden worden gemaakt of niet."
 
 #: src/mkvtoolnix-gui/util/message_box.cpp:167
 #, no-c-format
@@ -6172,7 +6172,7 @@ msgstr "A&fsluiten"
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:210
 #, no-c-format
 msgid "E&xpand chapter's start and end timestamps to include the minimum/maximum timestamps of all their sub-chapters"
-msgstr "Vouw het hoofdstuk begin- en eindtijdstempels uit met de minimum / ma&ximum tijdstempels van alle subhoofdstukken"
+msgstr "Vouw de hoofdstuk begin- en eindtijdstempels uit met de minimum / ma&ximum tijdstempels van alle subhoofdstukken"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:395
 #, fuzzy, no-c-format
@@ -6212,7 +6212,7 @@ msgstr "EBML leegte"
 #: src/common/bcp47.cpp:484
 #, no-c-format
 msgid "Each extension identifier must be used at most once."
-msgstr ""
+msgstr "Elke extensie-ID mag maximaal één keer worden gebruikt."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:198
 #, no-c-format
@@ -6222,7 +6222,7 @@ msgstr "Elk bestand aangemaakt bevat één segment, en elk segment heeft één s
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:502
 #, no-c-format
 msgid "Each part is then matched against the list of languages selected below to determine whether or not to use it as the track language."
-msgstr ""
+msgstr "Elk onderdeel wordt vervolgens vergeleken met de hieronder geselecteerde talen om te bepalen of het onderdeel al dan niet als tracktaal moet worden gebruikt."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:309
 #, no-c-format
@@ -6243,7 +6243,7 @@ msgstr "Taal markering"
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
 #, fuzzy, no-c-format
 msgid "Edit language shortcut"
-msgstr "&Talen:"
+msgstr "Taal snelkoppeling bewerken"
 
 #: src/propedit/propedit_cli_parser.cpp:278
 #, no-c-format
@@ -6259,7 +6259,7 @@ msgstr "Editie UID"
 #: src/common/kax_element_names.cpp:290
 #, fuzzy, no-c-format
 msgid "Edition display"
-msgstr "Editie ingang"
+msgstr "Editie scherm"
 
 #: src/common/kax_element_names.cpp:285
 #: src/mkvtoolnix-gui/chapter_editor/chapter_model.cpp:81
@@ -6311,7 +6311,7 @@ msgstr "Extractie van spoor ID {0} met het CodecID '{1}' is niet ondersteund.\n"
 #: src/mkvtoolnix-gui/merge/output.cpp:338
 #, no-c-format
 msgid "Either the word 'all' which selects all chapters or a comma-separated list of chapter numbers before which to split."
-msgstr "Aangeven van het woord 'all' welke alle hoofdstukken of een komma gescheiden lijst van hoofdstuknummers waarna er gesplitst moet worden."
+msgstr "Hetzij het woord 'all' waarmee alle hoofdstukken worden geselecteerd, hetzij een door komma's gescheiden lijst met hoofdstuknummers waarvoor gesplitst moet worden."
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:224
 #, no-c-format
@@ -6341,22 +6341,22 @@ msgstr "Elementen in de categorie '{0}' ('--edit {1}'):\n"
 #: src/common/kax_element_names.cpp:113
 #, no-c-format
 msgid "Emphasis"
-msgstr ""
+msgstr "Nadruk"
 
 #: src/common/property_element.cpp:215
 #, no-c-format
 msgid "Emphasis applied on audio which must be reversed by player to get the actual samples."
-msgstr ""
+msgstr "De nadruk ligt op audio, die door de speler moet worden omgedraaid om de daadwerkelijke samples te krijgen."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2259
 #, no-c-format
 msgid "Emphasis:"
-msgstr ""
+msgstr "Nadruk:"
 
 #: src/common/hacks.cpp:64
 #, no-c-format
 msgid "Enable appending and splitting FLAC tracks."
-msgstr ""
+msgstr "Schakel het toevoegen en splitsen van FLAC-tracks in."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2343
 #, no-c-format
@@ -6366,17 +6366,17 @@ msgstr "Kopiëren van items volgens hun type inschakelen"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2344
 #, no-c-format
 msgid "Enable copying of tracks by their language"
-msgstr "Aanzetten samenvoegen van sporen op hun taal"
+msgstr "Kopieren van sporen volgens hun taal inschakelen"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2314
 #, no-c-format
 msgid "Enable dialog &normalization gain removal for audio tracks"
-msgstr "Schakel het verwijderen van dialogen en &normalisatie in voor audiosporen"
+msgstr "Schakel dialoognormalisatieversterkingsverwijdering voor audiosporen in""
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2261
 #, no-c-format
 msgid "Enable language codes from &ISO 639-3 && 639-5"
-msgstr ""
+msgstr "Taalcodes van &ISO 639-3 && 639-5 inschakelen"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
 #, no-c-format
@@ -6399,7 +6399,7 @@ msgstr ""
 #: src/common/hacks.cpp:48
 #, no-c-format
 msgid "Enables warnings for certain conditions where timestamps aren't monotonous in situations where they should be which could indicate either a problem with the file or a programming error."
-msgstr ""
+msgstr "Hiermee worden waarschuwingen ingeschakeld voor bepaalde omstandigheden waarbij tijdstempels niet monotoon zijn in situaties waarin dat wel zou moeten, wat kan duiden op een probleem met het bestand of een programmeerfout."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:270
 #, no-c-format
@@ -6409,7 +6409,7 @@ msgstr "Aanzetten items"
 #: src/common/hacks.cpp:60
 #, no-c-format
 msgid "Enabling this option causes mkvmerge to keep that last entry."
-msgstr "Aanzetten van deze optie zorgt ervoor, dat mkvmerge de laatste ingang zal behouden."
+msgstr "Aanzetten van deze optie zorgt ervoor dat mkvmerge de laatste ingang zal behouden."
 
 #: src/common/av1.h:47
 #, no-c-format
@@ -6498,7 +6498,7 @@ msgstr "Fout in regel {0}: verwachtte een ondertitel nummer maar vond een tekst.
 #: src/mkvtoolnix-gui/merge/tab.cpp:175
 #, no-c-format
 msgid "Error loading settings file"
-msgstr "Instellingen bestand laadt fout"
+msgstr "Fout bij het laden van instellingenbestand"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:482
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:539
@@ -6527,7 +6527,7 @@ msgstr "Fout bij ontleden van markeringen '{0}': sommige verplichte elementen on
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:965
 #, no-c-format
 msgid "Error playing audio"
-msgstr "Fout met spelen geluid"
+msgstr "Fout met afspelen geluid"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:203
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -6668,7 +6668,7 @@ msgstr "Voer actie uit wanneer de &wachtrij is voltooid"
 #: src/mkvtoolnix-gui/util/settings.cpp:332
 #, no-c-format
 msgid "Execute program '%1'"
-msgstr "Voeren programma '%1' uit"
+msgstr "Voer programma '%1' uit"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:232
 #, no-c-format
@@ -6693,12 +6693,12 @@ msgstr "Verlaat code (0: ok, 1: waarschuwing voorgekomen, 2: fouten voorgekomen"
 #: src/common/xml/ebml_converter.cpp:209
 #, no-c-format, c++-format
 msgid "Expected a time in the following format: HH:MM:SS.nnn (HH = hour, MM = minute, SS = second, nnn = millisecond up to nanosecond. You may use up to nine digits for 'n' which would mean nanosecond precision). You may omit the hour as well. Found '{0}' instead. Additional error message: {1}"
-msgstr "Verwacht een tijd in het volgende formaat: HH:MM:SS.nnn (HH = uren, MM = minuten, SS = seconden, nnn = milliseconden tot aan nanoseconden. Je mag tot negen cijfers opgeven voor 'n' wat betekend nanoseconde precisie). Je mag tevens het uur weglaten. Gevonden '{0}' in plaats daarvan. Extra fout bericht: {1}"
+msgstr "Verwacht een tijd in het volgende formaat: HH:MM:SS.nnn (HH = uren, MM = minuten, SS = seconden, nnn = milliseconden tot aan nanoseconden. Je mag tot negen cijfers opgeven voor 'n' wat betekend nanoseconde precisie). Je mag tevens het uur weglaten. In plaats daarvan '{0}' gevonden. Extra fout bericht: {1}"
 
 #: src/extract/extract_cli_parser.cpp:108
 #, no-c-format
 msgid "Exports the chapter information in the simple format used in OGM tools (CHAPTER01=... CHAPTER01NAME=...)."
-msgstr "Exporteert de hoofdstuk informatie in simpel format gebruikt in OGM hulpmiddel (HOOFDSTUK01=... HOOFDSTUK01NAAM=...)."
+msgstr "Exporteert de hoofdstuk informatie in simpel formaat gebruikt in OGM hulpmiddel (HOOFDSTUK01=... HOOFDSTUK01NAAM=...)."
 
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:217
 #, fuzzy, no-c-format
@@ -6713,7 +6713,7 @@ msgstr "Het bereikpercentage van sonde '{0}' is ongeldig.\n"
 #: src/common/bcp47.cpp:476
 #, no-c-format
 msgid "Extension subtags must follow at least a primary language subtag."
-msgstr ""
+msgstr "Subtags voor extensies moeten ten minste een subtag in de primaire taal volgen."
 
 #: src/extract/extract_cli_parser.cpp:82
 #, no-c-format
@@ -6779,12 +6779,12 @@ msgstr "FLAC"
 #: src/common/file_types.cpp:37
 #, no-c-format
 msgid "FLAC (Free Lossless Audio Codec)"
-msgstr "FLAC (verlies vrije audio Audio Codec)"
+msgstr "FLAC (verlies vrije Audio Codec)"
 
 #: src/common/file_types.cpp:39
 #, no-c-format
 msgid "FLV (Flash Video)"
-msgstr "FLV (Flash video)"
+msgstr "FLV (Flash Video)"
 
 #: src/common/audio_emphasis.cpp:53
 #, no-c-format
@@ -6996,12 +6996,12 @@ msgstr "Markeringen:"
 #: src/common/file_types.cpp:86
 #, no-c-format
 msgid "Flash Video"
-msgstr "Flash video"
+msgstr "Flash Video"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:168
 #, no-c-format
 msgid "Floating point number"
-msgstr "Veranderend nummer"
+msgstr "Zwevendekommagetal"
 
 #: src/common/cli_parser.cpp:194
 #, no-c-format
@@ -7018,12 +7018,12 @@ msgstr "Voor alle beelden"
 #: src/mkvtoolnix-gui/merge/output.cpp:202
 #, no-c-format
 msgid "For an in-depth explanantion of file/segment linking and this feature please read mkvmerge's documentation."
-msgstr "Voor uitgebreidere uitleg van bestand/segment linken en de mogelijkheden lees de documentatie van mkvmerge's."
+msgstr "Voor uitgebreidere uitleg van bestand/segment linken en de mogelijkheden lees de documentatie van mkvmerge."
 
 #: src/mkvtoolnix-gui/merge/adding_directories_dialog.cpp:49
 #, no-c-format
 msgid "For each directory a new multiplex settings tab can be created. All files from that directory will be added to this new tab. The configuration about dragging & dropping/copying & pasting files is ignored in this case."
-msgstr ""
+msgstr "Voor elke directory kan een nieuw multiplex-instellingentabblad worden gemaakt. Alle bestanden uit die directory worden toegevoegd aan dit nieuwe tabblad. De configuratie over het slepen en neerzetten/kopiëren en plakken van bestanden wordt in dit geval genegeerd."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:335
 #, no-c-format
