--- a/po/nl.po
+++ b/po/nl.po
@@ -7028,12 +7028,12 @@ msgstr "Voor elke directory kan een nieuw multiplex-instellingentabblad worden g
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:335
 #, no-c-format
 msgid "For each track type the GUI determines if at least one track has the flag turned on."
-msgstr ""
+msgstr "Voor elk tracktype bepaalt de GUI of bij minstens één track de vlag is ingeschakeld."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:418
 #, no-c-format
 msgid "For example, a file containing audio tracks but no video tracks will be inserted before the first file that contains neither video nor audio tracks."
-msgstr ""
+msgstr "Bijvoorbeeld, een bestand met audiotracks maar geen videotracks wordt ingevoegd vóór het eerste bestand dat noch video- noch audiotracks bevat."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:68
 #, no-c-format
@@ -7089,7 +7089,7 @@ msgstr "Gevonden ten minste één B beeldje zonder tweede referentie in een niet
 #: src/common/bcp47.cpp:538
 #, no-c-format
 msgid "Four-letter language codes are reserved for future use and not supported."
-msgstr ""
+msgstr "Vierletterige taalcodes zijn gereserveerd voor toekomstig gebruik en worden niet ondersteund."
 
 #: src/merge/mkvmerge.cpp:1495
 #, no-c-format, c++-format
@@ -7154,7 +7154,7 @@ msgstr "Vrij bewerk formulier voor gebruiker gedefinieerde opties voor dit spoor
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:948
 #, no-c-format
 msgid "Free-form input"
-msgstr ""
+msgstr "Vrije invoer"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:261
 #, no-c-format
@@ -7164,12 +7164,12 @@ msgstr "Uiterlijk"
 #: src/common/kax_element_names.cpp:159
 #, no-c-format
 msgid "Gamma"
-msgstr "Gamma:"
+msgstr "Gamma"
 
 #: src/common/hacks.cpp:55
 #, no-c-format
 msgid "Garbage at the start of audio tracks in AVI files is normally used for delaying that track."
-msgstr "Rommel aan het begin van audio sporen in AVI-bestanden wordt gewoonlijk gebruikt voor het uitstellen van dat spoor."
+msgstr "Rommel aan het begin van audio sporen in AVI-bestanden wordt gewoonlijk gebruikt voor het vertragen van dat spoor."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2269
 #, no-c-format
@@ -7194,7 +7194,7 @@ msgstr "Algemene variabelen"
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:73
 #, no-c-format
 msgid "Generate new random track UIDs instead of keeping existing ones."
-msgstr ""
+msgstr "Genereer nieuwe willekeurige track-UID's in plaats van bestaande te behouden."
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/generate_sub_chapters_parameters_dialog.h:178
 #, no-c-format
@@ -7300,7 +7300,7 @@ msgstr "HEVC/H.265 basisstroom"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:882
 #, no-c-format
 msgid "Handle all files from all directories as a single list of files"
-msgstr ""
+msgstr "alle bestanden uit alle mappen als één enkele lijst met bestanden behandelen"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:444
 #, no-c-format
@@ -7398,7 +7398,7 @@ msgstr "ID"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2260
 #, no-c-format
 msgid "IETF BCP 47 &normalization mode:"
-msgstr ""
+msgstr "IETF BCP 47 &normalisatiemodus:"
 
 #: src/common/iso639.cpp:43
 #, no-c-format
