--- a/po/nl.po
+++ b/po/nl.po
@@ -7488,7 +7488,7 @@ msgstr "Indien aangevinkt, wordt alleen de lijst met veelgebruikte vermeldingen 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:301
 #, no-c-format
 msgid "If checked, the GUI will not show helpful usage tips in popup windows while hovering over a control — such as this one."
-msgstr ""
+msgstr "Als deze optie is aangevinkt, worden er in de GUI geen nuttige gebruikstips weergegeven in pop-upvensters wanneer u met de muis over een besturingselement beweegt, zoals in dit voorbeeld."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:586
 #, no-c-format
@@ -7513,7 +7513,7 @@ msgstr "Indien aangezet, worden nummers van dit type altijd ingesteld om te word
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:420
 #, no-c-format
 msgid "If disabled, files and tracks will be inserted after all existing files and tracks."
-msgstr ""
+msgstr "Indien uitgeschakeld, worden bestanden en tracks na alle bestaande bestanden en tracks ingevoegd."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:342
 #, no-c-format
@@ -7548,27 +7548,27 @@ msgstr "Indien ingeschakeld, wordt het verwijderen van de dialoog normalisatie-v
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:450
 #, no-c-format
 msgid "If enabled, small colored boxes will be shown in the file and track lists as a visual clue to help associating tracks with the files they come from."
-msgstr ""
+msgstr "Indien ingeschakeld, worden er kleine gekleurde vakjes weergegeven in de bestands- en tracklijsten als visuele aanwijzing. Zo kunt u tracks gemakkelijker koppelen aan de bestanden waaruit ze afkomstig zijn."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:562
 #, no-c-format
 msgid "If enabled, such files will always be skipped without asking."
-msgstr ""
+msgstr "Indien ingeschakeld, worden dergelijke bestanden altijd zonder toestemming overgeslagen."
 
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Indien ingeschakeld, wordt het BlockAddID-element geschreven, zelfs als de standaardwaarde 1 is."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:334
 #, no-c-format
 msgid "If enabled, the GUI checks the state of the 'track enabled' flag of all video, audio & subtitle tracks when starting to multiplex or adding a job to the job queue."
-msgstr ""
+msgstr "Indien ingeschakeld, controleert de GUI de status van de 'track enabled'-vlag van alle video-, audio- en ondertitelsporen bij het starten van multiplexen of het toevoegen van een taak aan de taakwachtrij."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "If enabled, the GUI will analyze the file names when you add multiple files at once."
-msgstr ""
+msgstr "Indien ingeschakeld, analyseert de GUI de bestandsnamen wanneer u meerdere bestanden tegelijk toevoegt."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:344
 #, no-c-format
