--- a/po/nl.po
+++ b/po/nl.po
@@ -7584,12 +7584,12 @@ msgstr "Indien aangezet, dan zal de grafische interface (GUI) voltooide taken ou
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:346
 #, no-c-format
 msgid "If enabled, the GUI will remove the output file created by a job if that job ends with an error or if the user aborts the job."
-msgstr ""
+msgstr "Indien ingeschakeld, verwijdert de GUI het uitvoerbestand dat door een taak is gemaakt als die taak met een fout eindigt of als de gebruiker de taak afbreekt."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:329
 #, no-c-format
 msgid "If enabled, the GUI will use legacy MIME types when detecting the MIME type of font attachments instead of the current standard MIME types."
-msgstr ""
+msgstr "Als deze optie is ingeschakeld, gebruikt de GUI oude MIME-typen bij het detecteren van het MIME-type van lettertypebijlagen in plaats van de huidige standaard MIME-typen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:436
 #, no-c-format
@@ -7604,7 +7604,7 @@ msgstr "Indien aangezet, zal de eerste tab in de \"taak uitvoer\" gereedschap ni
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:557
 #, no-c-format
 msgid "If enabled, the largest cover image of a Blu-ray will be added as an attachment when adding a Blu-ray playlist."
-msgstr ""
+msgstr "Indien ingeschakeld, wordt de grootste coverafbeelding van een Blu-ray toegevoegd als bijlage bij het toevoegen van een Blu-ray-afspeellijst"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:360
 #, no-c-format
@@ -7614,7 +7614,7 @@ msgstr "Indien aangezet, zal de laatste ingang worden overgeslagen bij het laden
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:325
 #, no-c-format
 msgid "If enabled, the names of tab headers will be shortened so that all tab headers fit into the window's width."
-msgstr ""
+msgstr "Als deze optie is ingeschakeld, worden de namen van tabbladkoppen ingekort, zodat alle tabbladkoppen in de breedte van het venster passen."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:340
 #, no-c-format
@@ -7624,7 +7624,7 @@ msgstr "Indien aangezet, zal het programma om bevestiging vragen voor het oversc
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:307
 #, no-c-format
 msgid "If enabled, the program will check online whether or not a new release of MKVToolNix is available on the home page."
-msgstr "Indien aangezet, zal het programma online controleren of een nieuwe versie van MKVToolNix beschikbaar is op de thuispagina."
+msgstr "Indien aangezet, zal het programma online controleren of een nieuwe versie van MKVToolNix beschikbaar is op de startpagina."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:345
 #, no-c-format
@@ -7677,7 +7677,7 @@ msgstr "Als er geen video uitvoer is dan wordt er niet gesplitst."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:336
 #, no-c-format
 msgid "If not, it will turn on the flag for the first track of the current type."
-msgstr ""
+msgstr "Als dat niet het geval is, wordt de vlag voor het eerste nummer van het huidige type ingeschakeld."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:224
 #, no-c-format
@@ -7692,7 +7692,7 @@ msgstr "Als er niets wordt ingevoerd, worden hoofdstukken gegenereerd maar wordt
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:561
 #, no-c-format
 msgid "If one is found, the GUI will ask whether to skip the file or to add it anyway."
-msgstr ""
+msgstr "Als er een bestand wordt gevonden, vraagt ​​de GUI of het bestand moet worden overgeslagen of toch moet worden toegevoegd."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:575
 #, no-c-format
@@ -7707,7 +7707,7 @@ msgstr "Als ingesteld op 'nee' dan zal de geselecteerde spoor niet worden gekopi
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:431
 #, no-c-format
 msgid "If such a sequence is detected, only the first file is added while the second and following files in the sequence are appended to the first one."
-msgstr ""
+msgstr "Als een dergelijke reeks wordt gedetecteerd, wordt alleen het eerste bestand toegevoegd, terwijl het tweede bestand en de volgende bestanden in de reeks aan het eerste worden toegevoegd."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:216
 #, no-c-format
@@ -7747,7 +7747,7 @@ msgstr "Als het bronbestand geen dergelijke eigenschap voor een audio spoor beva
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:451
 #, no-c-format
 msgid "If there are more entries than configured colors, random colors will be used temporarily."
-msgstr ""
+msgstr "Als er meer items zijn dan geconfigureerde kleuren, worden tijdelijk willekeurige kleuren gebruikt."
 
 #: src/mkvtoolnix-gui/chapter_editor/mass_modification_dialog.cpp:76
 #, no-c-format
@@ -7757,12 +7757,12 @@ msgstr "Als er geen dergelijk hoofdstuk is, wordt in plaats daarvan het eindtijd
 #: src/common/hacks.cpp:67
 #, no-c-format
 msgid "If this hack is enabled, the code will leave the parameter sets as they are."
-msgstr ""
+msgstr "Als deze hack is ingeschakeld, laat de code de parametersets zoals ze zijn."
 
 #: src/common/hacks.cpp:69
 #, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr ""
+msgstr "Als deze hack is ingeschakeld, worden ze niet verwijderd."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:566
 #, no-c-format
@@ -7842,7 +7842,7 @@ msgstr "Als u deze als extra onderdelen wilt bijvoegen of toevoegen, moet u sele
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:555
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Negeert afspeellijsten die waarschijnlijk bedoeld zijn voor menu's."
 
 #: src/output/p_textsubs.cpp:150
 #, no-c-format, c++-format
@@ -7887,7 +7887,7 @@ msgstr "In het meest compacte layout de spoor eigenschappen zijn gelokaliseerd a
 #: src/input/r_real.cpp:540
 #, no-c-format, c++-format
 msgid "Inconsistent AAC audio packet (length: {0} != {1})\n"
-msgstr "Samenhangend AAC audio pakket (lengte: {0} != {1})\n"
+msgstr "Onsamenhangend AAC audio pakket (lengte: {0} != {1})\n"
 
 #: src/common/cli_parser.cpp:188
 #: src/merge/mkvmerge.cpp:87
@@ -7925,7 +7925,7 @@ msgstr "Info gereedschap"
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:221
 #, no-c-format
 msgid "Information"
-msgstr "Iinformatie"
+msgstr "Informatie"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:397
 #, no-c-format
@@ -7955,7 +7955,7 @@ msgstr "In plaats daarvan, een dergelijk bestand moet worden ingesteld via de 's
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2230
 #, no-c-format
 msgid "Interface &language:"
-msgstr "Uiterlijk taa&l:"
+msgstr "Interface taa&l:"
 
 #: src/common/kax_element_names.cpp:160
 #, no-c-format
@@ -7975,7 +7975,7 @@ msgstr "Interne programma fout"
 #: src/input/unsupported_types_signature_prober.cpp:71
 #, no-c-format
 msgid "Internet Video Recording (IVR)"
-msgstr ""
+msgstr "Internet Video Recording (IVR)"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2298
 #, no-c-format
@@ -8108,7 +8108,7 @@ msgstr "Ongeldig format: Dubbelepunt binnenin nano-tweede deel"
 #: src/common/strings/parsing.cpp:150
 #, no-c-format
 msgid "Invalid format: More than nine nano-second digits"
-msgstr "Ongeldig format: Meer dan negen nanoseconden cijfers"
+msgstr "Ongeldig format: Meer dan negen nanosecondencijfers"
 
 #: src/common/strings/parsing.cpp:169
 #, no-c-format
