--- a/po/nl.po
+++ b/po/nl.po
@@ -8242,12 +8242,12 @@ msgstr "Ongeldig start/eind specificatie voor '--split' in '--split {0}' (huidig
 #: src/merge/mkvmerge.cpp:1443
 #, no-c-format, c++-format
 msgid "Invalid sub charset option. No track ID specified in '--sub-charset {0}'.\n"
-msgstr "Ongeldige sub karakterset optie. Geen spoor ID opgegeven in, sub-karakter set, '--sub-charset {0}'.\n"
+msgstr "Ongeldige sub karakterset optie. Geen spoor ID opgegeven in, '--sub-charset {0}'.\n"
 
 #: src/merge/mkvmerge.cpp:1450
 #, no-c-format, c++-format
 msgid "Invalid sub charset specified in '--sub-charset {0}'.\n"
-msgstr "Ongeldige sub karakterset opgegeven in, sub-karakter set, '--sub-charset {0}'.\n"
+msgstr "Ongeldige sub karakterset opgegeven in, '--sub-charset {0}'.\n"
 
 #: src/merge/mkvmerge.cpp:654
 #: src/merge/mkvmerge.cpp:690
@@ -8353,7 +8353,7 @@ msgstr "Wordt genegeerd voor XML hoofdstuk(ken) bestand(en)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:426
 #, no-c-format
 msgid "It tries to detect sequences of names that likely belong to the same movie by splitting the name into three parts: a prefix, a running number and a suffix that doesn't contain digits."
-msgstr ""
+msgstr "Het programma probeert reeksen namen te detecteren die waarschijnlijk bij dezelfde film horen, door de naam in drie delen te splitsen: een voorvoegsel, een volgnummer en een achtervoegsel dat geen cijfers bevat."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:607
 #, no-c-format
