program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -10355,7 +10355,7 @@ msgstr "Noms predefinits per a la pista de vídeo"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Impedeix que el mkvmerge cerqui capes de millora de Dolby Vision emmagatzemades en una pista separada i que les combini amb la pista que conté la capa base de Dolby Vision."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
