program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -10394,7 +10394,7 @@ msgstr "Nombres predefinidos para pista de vídeo"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Evita que mkvmerge busque capas de mejora de Dolby Vision almacenadas en una pista separada y las combine con la pista que contiene la capa base de Dolby Vision."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
