--- a/po/fr.po
+++ b/po/fr.po
@@ -10311,7 +10311,7 @@ msgstr "Noms de pistes vidéo prédéfinis"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Empêche mkvmerge de rechercher les Dolby Vision Enhancement Layers stockées dans une piste séparée et de les combiner avec la piste contenant la Dolby Vision Base Layer."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
