program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -1642,20 +1642,20 @@ msgid "%1 since starting the program"
 msgstr "%1 dall'avvio del programma"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:117
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 error"
 msgid_plural "%1+%2 errors"
-msgstr[0] "%1 errore"
-msgstr[1] "%1 errori"
-msgstr[2] "%1 errori"
+msgstr[0] "%1+%2 errori"
+msgstr[1] "%1+%2 errori"
+msgstr[2] "%1+%2 errori"
 
 #: src/mkvtoolnix-gui/main_window/status_bar_progress_widget.cpp:116
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "%1+%2 warning"
 msgid_plural "%1+%2 warnings"
-msgstr[0] "%1 notifica"
-msgstr[1] "%1 notifiche"
-msgstr[2] "%1 notifiche"
+msgstr[0] "%1+%2 avvisi"
+msgstr[1] "%1+%2 avvisi"
+msgstr[2] "%1+%2 avvisi"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:350
 #, no-c-format
@@ -10330,7 +10330,7 @@ msgstr "Nomi predefiniti tracce video"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Impedisce a mkvmerge di cercare i livelli di miglioramento Dolby Vision memorizzati in una traccia separata e di combinarli con la traccia contenente il livello di base Dolby Vision."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
