program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -10287,7 +10287,7 @@ msgstr "Forhåndsdefinerte navn på videospor"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Hindrer mkvmerge i å lete etter Dolby Vision Enhancement Layers lagret i et eget spor og kombinere dem med sporet som inneholder Dolby Vision Base Layer."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
