--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-09-07 12:50+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2024\n"
+"Last-Translator: Andrei Stepanov, 2018-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -10074,7 +10074,7 @@ msgstr "Стандартные имена дорожек видео"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Предотвращает поиск mkvmerge слоёв улучшения Dolby Vision, сохранённых в отдельной дорожке, и их объединение с дорожкой, содержащей базовый слой Dolby Vision."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
