program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -10276,7 +10276,7 @@ msgstr "Ön tanımlı görüntü izi adları"
 #: src/common/hacks.cpp:71
 #, no-c-format
 msgid "Prevents mkvmerge from looking for Dolby Vision Enhancement Layers stored in a separate track & combining them with the track containing the Dolby Vision Base Layer."
-msgstr ""
+msgstr "Mkvmerge'ün ayrı bir izde saklanan Dolby Vision Geliştirme Katmanlarını aramasını ve bunları Dolby Vision Temel Katmanını içeren parçayla birleştirmesini engeller."
 
 #: src/common/kax_element_names.cpp:96
 #: src/common/property_element.cpp:123
