program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -10271,7 +10271,7 @@ msgstr "Les raison possibles sont : le fichier n'est pas un fichier Matroska ; i
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "Fichiers de marque-pages de PotPlayer"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
