program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -10236,7 +10236,7 @@ msgstr "Muhtemel sebepler: dosya bir Matroska dosyası değil; dosya yazmaya kar
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "PotPlayer yer işareti dosyaları"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
